# dmlinq

./: CMakeLists.txt  README.md  build.bat  build_mingw.bat  build_with_vcpkg.bat  build_with_vcpkg.sh
examples/dmlinq/: main.cpp
include/: dmlinq.h  dmlinq.hpp  dmlinq_config.h  dmlinq_config.h.in
include/linq/extensions/: select_many.h
include/tpp/: dmlinq_aggregation.tpp  dmlinq_conversion.tpp  dmlinq_element.tpp  dmlinq_execution.tpp  dmlinq_filtering.tpp  dmlinq_partitioning.tpp  dmlinq_projection.tpp  dmlinq_quantifiers.tpp  dmlinq_sorting.tpp
src/libdmlinq/: libdmlinq.def  libdmlinq_impl.cpp  libdmlinq_impl.h
test/dmlinqtest/: dmlinqtest.cpp
vcpkg-ports/dmlinq/: portfile.cmake  usage  vcpkg.json
